Created and implemented 'available' value in liquibase
