# src/main/java/org/folio/sample/controller/BookController.java
@@ -76,4 +76,13 @@ public class BookController implements BooksApi {
       HttpStatus.OK
     );
   }
+
+  public ResponseEntity<List<BookDTO>> getAllAvailable() {
+    log.info("Called GET /books/available");
+
+    return new ResponseEntity<>(
+      bookService.findAllAvailable().stream().map(bookMapper::toDto).toList(),
+      HttpStatus.OK
+    );
+  }
 }
